# M3

./: .env.dev  .gitignore  CONF.ini  POZDOWIENIA.py  README.md  alembic.ini  info.md  pyproject.toml
app/: __init__.py  main.py  settings.py
app/api/regal/: routers.py
app/api/routers/: routers.py
app/api/work_time/: models.py  schema.py  services.py  work_routers.py
app/app/uploads/: Lagerspiegel_full.txt  merged_data.csv
app/core/: Untitled-1.txt  models.py
app/core/db/: base.py  db.py  mixins.py  models.py
app/services/: services.py
app/templates/: _base.html  _footer.html  _navigation.html  index.html
app/templates/cards/: _material_card.html  _materials.html
app/templates/m1/: Lagerspiegel_full.txt  P1.txt  P4.txt  P4Xe.txt  m1.js  m2.js
app/uploads/: Lagerspiegel_full.txt  P4Xe.txt  merged_data.csv
extentions/search_ex/: manifest.json  popup.html  popup.js
m1/: Aufträge.txt  Lagerspiegel_full.txt  P1.txt  P4.txt  P4Xe.txt  calc.html  index.html  m1.js  m2.js  szlifowanie
migrations/: env.py
migrations/versions/: 009b8b656a58_test_migration.py  991ff8e8102d_add_user_model.py  d0c7b27e65fb_create_material_table.py  d5dd53a006b7_initial_migration.py
test/: P4Xe.txt  t.py
test_marimo/: test_data.py
