[project]
name = "m3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.12",
    "loguru>=0.7.3",
    "marimo>=0.14.10",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "sqlalchemy[asyncio]>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "marimo>=0.14.10",
]
